--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation "com.github.gikkman:Java-Twirk:0.5"
+    implementation "org.mongodb:mongodb-driver:3.10.1"
 }
