--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation "com.github.gikkman:Java-Twirk:0.5"
     implementation "org.mongodb:mongodb-driver:3.10.1"
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
     compile group: 'com.github.twitch4j', name: 'twitch4j', version: '1.0.0-alpha.13'
 }
