--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     compile group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.25'
     compile group: 'com.github.twitch4j', name: 'twitch4j', version: '1.0.0-alpha.19'
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     compile 'net.dv8tion:JDA:4.1.1_101'
 }
