--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     compile 'net.dv8tion:JDA:4.1.1_101'
     compile "com.google.guava:guava:16+"
+    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4"
 }
 
 jar {
