--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation "com.github.gikkman:Java-Twirk:0.6.1"
-    implementation "org.mongodb:mongodb-driver:3.10.1"
+    implementation "org.mongodb:mongodb-driver-sync:4.1.0"
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     compile group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.25'
