--- a/build.gradle
+++ b/build.gradle
@@ -22,20 +22,20 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation "com.github.gikkman:Java-Twirk:0.6.2"
-    implementation "org.mongodb:mongodb-driver-sync:4.1.0"
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    compile group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.25'
-    compile group: 'com.github.twitch4j', name: 'twitch4j', version: '1.1.2'
-    compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.7'
-    compile group: 'org.ini4j', name: 'ini4j', version: '0.5.4'
-    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-    compile group: 'com.jcraft', name: 'jsch', version: '0.1.54'
-    compile 'net.dv8tion:JDA:4.1.1_101'
-    compile "com.google.guava:guava:16+"
-    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.4"
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'com.github.gikkman', name: 'Java-Twirk', version: '0.6.2'
+    implementation group: 'org.mongodb', name: 'mongodb-driver-sync', version: '4.1.0'
+    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.4.0'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    implementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.25'
+    implementation group: 'com.github.twitch4j', name: 'twitch4j', version: '1.1.2'
+    implementation group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.7'
+    implementation group: 'org.ini4j', name: 'ini4j', version: '0.5.4'
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    implementation group: 'com.jcraft', name: 'jsch', version: '0.1.54'
+    implementation group: 'net.dv8tion', name: 'JDA', version: '4.1.1_101'
+    implementation group: 'com.google.guava', name: 'guava', version: '16+'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.4'
 }
 
 jar {
