--- a/build.gradle
+++ b/build.gradle
@@ -22,21 +22,21 @@ repositories {
 }
 
 dependencies {
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     implementation group: 'com.github.JCog', name: 'gb-utils', version: 'v1.7.0'
     implementation group: 'com.github.gikkman', name: 'Java-Twirk', version: '0.6.3'
-    implementation group: 'org.mongodb', name: 'mongodb-driver-sync', version: '4.1.0'
-    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.4.0'
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    implementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.25'
-    implementation group: 'com.github.twitch4j', name: 'twitch4j', version: '1.1.2'
+    implementation group: 'org.mongodb', name: 'mongodb-driver-sync', version: '4.2.0'
+    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    implementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.30'
+    implementation group: 'com.github.twitch4j', name: 'twitch4j', version: '1.2.0'
     implementation group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.7'
     implementation group: 'org.ini4j', name: 'ini4j', version: '0.5.4'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-    implementation group: 'com.jcraft', name: 'jsch', version: '0.1.54'
+    implementation group: 'com.jcraft', name: 'jsch', version: '0.1.55'
     implementation group: 'net.dv8tion', name: 'JDA', version: '4.2.0_168'
-    implementation group: 'com.google.guava', name: 'guava', version: '16+'
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.4'
+    implementation group: 'com.google.guava', name: 'guava', version: '30.1-jre'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.1'
 }
 
 jar {
