--- a/build.gradle
+++ b/build.gradle
@@ -26,18 +26,18 @@ repositories {
 
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
-    implementation group: 'org.mongodb', name: 'mongodb-driver-sync', version: '4.5.0'
+    implementation group: 'org.mongodb', name: 'mongodb-driver-sync', version: '4.8.1'
     implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
-    implementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.36'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
+    implementation group: 'org.slf4j', name: 'slf4j-nop', version: '2.0.5'
     implementation group: 'com.github.twitch4j', name: 'twitch4j', version: '1.12.0'
-    implementation group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.7'
+    implementation group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.7' // outdated but has breaking changes
     implementation group: 'org.ini4j', name: 'ini4j', version: '0.5.4'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation group: 'com.jcraft', name: 'jsch', version: '0.1.55'
     implementation group: 'net.dv8tion', name: 'JDA', version: '4.3.0_310'
-    implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.3'
+    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.14.1'
     implementation group: 'com.fathzer', name: 'javaluator', version: '3.0.3'
 }
 
