--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ allprojects {
     }
 }
 
-version '1.0'
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 javadoc.options.encoding = 'UTF-8'
@@ -46,4 +45,8 @@ jar {
                 'Main-Class': 'Main'
         )
     }
+}
+
+shadowJar {
+    archiveClassifier.set('')
 }
